[Java] Change on the call of "getFirstOr‥" and "getLastOr‥" to have the call of getFirst and getLast when applicable